Added authentication using firebase

--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -18,6 +18,7 @@
         width:60%;
         display: flex;
         justify-content: flex-end;
+        align-items: center;
 
         span{
             padding: 2rem;
