--- a/src/components/collection-item/collection-item.style.scss
+++ b/src/components/collection-item/collection-item.style.scss
@@ -15,7 +15,7 @@
         height:300px;
         border:2px solid #5d4b4eb8;
         border-radius: 5px;
-        background-size: cover;
+        background:grey;
     }
     .collection-footer{
         width: 100%;
