--- a/src/components/custom-button/custom-button.style.scss
+++ b/src/components/custom-button/custom-button.style.scss
@@ -1,10 +1,14 @@
 .custom-button{
-    width:8rem;
-    height:2rem;
-    background: grey;
     color: black;
+    width: 11rem;
+    height: 3rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border: 2px solid black;
+    box-shadow: 0 0 12px 1px #6f6f78;
+    background: #7fb2df;
     &:hover{
         background: black;
-        color: white;
+        color: rgb(219, 203, 203);
     }
 }
