Added item quantity count on cart icon(selector in redux)

--- a/src/components/custom-button/custom-button.style.scss
+++ b/src/components/custom-button/custom-button.style.scss
@@ -9,6 +9,15 @@
     background: #7fb2df;
     &:hover{
         background: black;
-        color: rgb(219, 203, 203);
+        color: white;
+    }
+}
+.inverted{
+    opacity:0.9;
+    color: black;
+    background-color: white;
+    &:hover{
+        background-color: black;
+        color: white;
     }
 }
