--- a/src/components/menu-item/menu-item.style.scss
+++ b/src/components/menu-item/menu-item.style.scss
@@ -10,7 +10,7 @@ div.menu-item{
     overflow: hidden;
     height:20rem;
     box-sizing: border-box;
-    word-break: break-all;
+    word-break: break-word;
     
     div.bg-image{
         width: 100%;
