--- a/src/components/collection-item/collection-item.style.scss
+++ b/src/components/collection-item/collection-item.style.scss
@@ -2,12 +2,21 @@
         width:23%;
         // margin:auto 1rem;
         // flex-grow: 1;
+        margin:0.25rem;
+        margin-bottom: 1rem;
+        position: relative;
         min-width:250px;
         display: flex;
         flex-direction: column;
+        align-items: center;
         &:hover{
             .image{
+                opacity:0.88;
                 box-shadow:0 0 15px 2px #89b9b2;
+            }
+            .custom-button{
+                display: flex;
+                justify-content: center;
             }
         }
     .image{
@@ -25,7 +34,12 @@
         padding:4px;
         box-sizing: border-box;
         .name{
-            word-break: break-all;
+            word-break: break-word;
         }
+    }
+    .custom-button{
+        position: absolute;
+        top:14rem;
+        display: none;
     }
 }
