--- a/src/components/form-input/form-input.style.scss
+++ b/src/components/form-input/form-input.style.scss
@@ -1,22 +1,25 @@
 .input-container{
     padding: 2rem;
+    position: relative;
 .form-input{
     border:none;
     outline:none;
     border-bottom: 2px solid grey;
     font-size: 1.2rem;
     &:focus ~ .input-label{
-        top:-2rem;
+        top:0.5rem;
         color:grey;
     }
 }
 .input-label{
-    left: -13.6rem;
-    top:0;
-    position: relative;
+    font-weight: 600;
+    left: 2rem;
+    top: 2rem;
+    position: absolute;
     transition:all 1s ease-in-out;
 }
 .shrink{
-    top:-2rem;
+    top:0.5rem;
+    color:grey;
 }
 }
