--- a/src/pages/signup-login/signup-login.style.scss
+++ b/src/pages/signup-login/signup-login.style.scss
@@ -1,3 +1,9 @@
 .auth-container{
     padding:2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    &>div{
+        margin:2rem;
+    }
 }
