--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -9,6 +9,7 @@
     background-color: white;
     top:80px;
     right:30px;
+    border: 2px solid #221313;
     z-index: 5;
 
     .cart-items{
@@ -16,6 +17,19 @@
         display: flex;
         flex-direction: column;
         overflow: auto;
+
+        
+    }
+
+    .empty-message{
+        height: 300px;
+        position: relative;
+        top: 6rem;
+        text-align: center;
+        font-size: 1.9rem;
+        font-family: monospace;
+        color: #d43029;
+        text-shadow: 0px 0px 20px #da3f5b;
     }
     button{
         margin:auto;
