Added persistance for cart items

--- a/src/components/collection-item/collection-item.style.scss
+++ b/src/components/collection-item/collection-item.style.scss
@@ -17,6 +17,7 @@
             .custom-button{
                 display: flex;
                 justify-content: center;
+                align-items: center;
             }
         }
     .image{
